### Added
- Added STATIC option to PTMProphet.
- reprint optiona dded to the yaml file.

### Changed

### Fixed
- Fixed a problem wih the PSM-to-Protein razor assingment.
- Small bugs and performance improvement.

## Snapcrat

- `snap install philosopher`